Creato oggetto, ciclo for-in, array di studenti

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS Oggetti Studenti</title>
 </head>
 <body>
-    
+    <h2 id="studente"></h2>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
