Inserite le stampe del ciclo for per ogni studente

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2 id="studente"></h2>
+    <h2 id="studenti"></h2>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
