--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h2 id="studente"></h2>
     <h2 id="studenti"></h2>
+    <h2 id="tutti"></h2>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
